--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+### This project ###
+
+shape_predictor_68_face_landmarks.dat
 
 # Created by https://www.gitignore.io/api/vim,python,opencv
 # Edit at https://www.gitignore.io/?templates=vim,python,opencv
